--- a/SRC/less/bootstrap-custom.less
+++ b/SRC/less/bootstrap-custom.less
@@ -1,4 +1,4 @@
-@brand-primary:#007593;
+@brand-primary:#9dd241;
 @border-color:#686968;
 
 @border-radius-base:        0;
@@ -44,18 +44,18 @@
 
 
 
-@text-color:										 #000000;
+@text-color:										 #3e5d7c;
 
-@font-family-sans-serif:  "Roboto",sans-serif;
-@font-size-base:					14px;
+@font-family-sans-serif:  "Open Sans",sans-serif;
+@font-size-base:					16px;
 
 @font-size-h1:            24px;
 @font-size-h2:            20px;
-@font-size-h3:            16px;
+@font-size-h3:            18px;
 
 
-@headings-font-family:    "Roboto Slab",sans-serif;
-@headings-font-weight:    800;
+@headings-font-family:     @font-family-sans-serif;
+@headings-font-weight:    300;
 
 @input-border:						@border-color;
 @input-border-focus:      @brand-primary;
@@ -64,16 +64,16 @@
 
 @padding-base-vertical:     8px;
 @padding-base-horizontal:   20px;
-@padding-large-vertical:    18px;
+@padding-large-vertical:    10px;
 @padding-large-horizontal:  32px;
 
 @navbar-default-color:             @text-color;
 @navbar-default-link-color:        @text-color;
 @navbar-default-link-hover-color:  @brand-primary;
 @navbar-default-link-active-color: @text-color;
-@navbar-height:                    120px;
-@navbar-default-bg:                transparent;
-@navbar-default-border:            transparent;
+@navbar-height:                    60px;
+@navbar-default-bg:                white;
+@navbar-default-border:            white;
 
 @close-color: @brand-primary;
 @close-font-weight: 300;
