--- a/SRC/less/style.less
+++ b/SRC/less/style.less
@@ -1,4 +1,4 @@
-@import url(//fonts.googleapis.com/css?family=Roboto+Slab:600,400,300,100|Roboto:400,600,700,700italic,400italic&subset=latin,latin-ext);
+@import url('//fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin-ext');
 
 @import "../bower_modules/bootstrap/less/variables.less";
 
