--- a/SRC/less/bootstrap.less
+++ b/SRC/less/bootstrap.less
@@ -24,11 +24,11 @@
 @import "@{bootstrap_path}buttons.less";
 
 // Components
-//@import "@{bootstrap_path}component-animations.less";
+@import "@{bootstrap_path}component-animations.less";
 @import "@{bootstrap_path}dropdowns.less";
 //@import "@{bootstrap_path}button-groups.less";
 //@import "@{bootstrap_path}input-groups.less";
-//@import "@{bootstrap_path}navs.less";
+@import "@{bootstrap_path}navs.less";
 @import "@{bootstrap_path}navbar.less";
 //@import "@{bootstrap_path}breadcrumbs.less";
 //@import "@{bootstrap_path}pagination.less";
