--- a/SRC/less/header.less
+++ b/SRC/less/header.less
@@ -1,64 +1,188 @@
-.logo{
-	letter-spacing:-1px;
-	font-family:@headings-font-family;
-	font-weight:300;
-	font-size:16px;
-	strong{font-size:24px;font-weight:600}
-
-	.claim{
-		display:block;
-		margin-top:5px
-	}
-
-}
-
 header{
-	border-bottom:8px solid @brand-primary;
-}
+	.navbar{
 
-.textwidget{
-	position:relative;z-index:0;line-height:1.4;
-	margin-top:10px;
+		margin-bottom:0;
+		font-weight:600;
 
-	a{
-		display:block;background:#ede9e0;border-radius:4px;padding:20px;
-	 .text{color:black}
-   .btn{display:block;margin:10px 0 0 0;font-size:1em}
+		.transition(all .5s);
+
+		border:none;
+
+		.nav .open > a, .nav .open > a:hover, .nav .open > a:focus {
+			background-color: transparent;
+		}
+
+		.container-fluid{position:relative;z-index:2}
+
+		font-weight:300;
 		
-		&:hover{text-decoration:none}
-	}
+		@media (min-width: @screen-lg-min) {
+			padding: 20px;
+		}
 
-	@media (min-width: @grid-float-breakpoint){
-		margin:10px -15px -15px 0;
-		max-width:290px;
-		float:right;
-	}
+		.navbar-right{
+			float:none!important;
+			margin:0;
 
-	@media (min-width: @screen-md){
-		margin-top:30px;
-		max-width:460px;
-		
-		a{
-			display:flex;
-
-			.btn{
-				margin:0 0 0 10px;
-				align-self:center;
+			@media (min-width: @screen-lg-min) {
+				float:right!important;
 			}
 		}
 
-		&:after{
-			content:'';
+		.navbar-header{
+
+
+			@media (min-width: @grid-float-breakpoint) {
+				float: none;
+			}
+
+			text-align:center;
+
+			.navbar-brand{
+				z-index:1;
+				float:none;
+				vertical-align: top;
+				padding:10px 0;
+				position: absolute;
+				top:0;left:50%;transform: translate(-50%);
+
+				@media (min-width: @screen-lg-min) {
+					
+					float:left;
+					position:relative;
+					transform: none;
+					left:0;
+					margin-left: 20px;
+				}
+
+				.logo{
+
+					.text-hide();
+					display:block;
+					height:40px;width:207px;display:block;
+					margin-left: -20px;
+					background:white url("../img/logo.svg") no-repeat 50% 50%;
+					background-size: auto 36px;
+
+				}
+			}
+
+			.navbar-toggle{
+				z-index:1;
+				border:0;
+				padding:5px 20px;
+				left:0px;
+				position:absolute;
+				.icon-bar{background:@text-color;width:23px;height:4px; border-radius:2px; transform-origin:0 50%;transition:all 0.2s}
+				.icon-bar:first-child{transform:rotate(45deg)}
+				.icon-bar+.icon-bar{opacity:0}
+				.icon-bar+.icon-bar+.icon-bar{transform:rotate(-45deg);opacity:1}
+
+				&:hover, &:focus{background:transparent}
+
+				&.collapsed{
+					.icon-bar:first-child{transform:rotate(0)}
+					.icon-bar+.icon-bar{opacity:1}
+					.icon-bar+.icon-bar+.icon-bar{transform:rotate(0)}
+				}
+
+
+			}
+		}
+
+		
+
+		.menu{
+			text-align:center;
+			border-color:transparent;
+			box-shadow:none;
+			
+			@media (min-width: @grid-float-breakpoint) {
+				padding: 0;
+				margin-left: -15px;
+				margin-right: -15px;
+			}		
+
+			@media (min-width: @screen-lg-min) {
+				float:left;
+			}				
+
+			.navbar-nav {
+				border-top:1px solid #e5e5e5;
+				margin-top:60px;
+				margin-bottom:0;
+				float:none;
+
+				@media (min-width: @grid-float-breakpoint) {
+					display: flex;
+					justify-content: space-between;
+				}
+
+				@media (min-width: @screen-lg-min) {
+					display: block;
+					border-top:0;
+					margin-top:0;
+				}				
+					
+				& > li  {
+					&>a{
+						padding: 20px 0;
+						border-bottom:1px solid #e5e5e5;
+
+						&:hover{
+							background:#f5f5f5;
+						}
+					}
+
+					@media (min-width: @grid-float-breakpoint) {
+						font-size: 14px;
+						&>a{
+							padding:14px 7px;
+							border-bottom:none;
+							&:hover{
+								background:white;
+							}
+						}
+					}
+
+					@media (min-width: @screen-md-min){
+						font-size: 16px
+					}				
+					
+					@media (min-width: @screen-lg-min) {
+						&>a{
+							padding:19px 10px;
+						}						
+					}					
+				}
+			}
+
+			&.collapsing,&.collapse.in{
+				background:white;
+			}
+
+
+		}
+
+
+
+
+		.languages{
+			border:0;
+			padding:0 5px;
+			right:15px;
+			top:0;
 			position:absolute;
-			z-index:-1;
-			background:#eeddba;
-			top:10%;
-			left:10px;
-			right:-1px;
-			bottom:-2px;
-			transform: skew(3deg, 1deg);
+			z-index: 2;
+			font-weight:600;
+
+
+			@media (min-width: @screen-lg-min){
+				position:static;
+				float:left;
+				padding-left: 20px;
+			}				
 		}
 	}
-
 }
 
