--- a/SRC/less/bootstrap-custom.less
+++ b/SRC/less/bootstrap-custom.less
@@ -1,5 +1,6 @@
 @brand-primary:#9dd241;
 @border-color:#686968;
+@screen-xlg-min: 1300px;
 
 @border-radius-base:        0;
 @border-radius-large:       0;
