--- a/SRC/less/header.less
+++ b/SRC/less/header.less
@@ -52,8 +52,12 @@ header{
 					position:relative;
 					transform: none;
 					left:0;
-					margin-left: 20px;
 				}
+
+				@media (min-width: @screen-xlg-min) {
+					margin-left: 50px;
+				}
+					
 
 				.logo{
 
@@ -63,6 +67,12 @@ header{
 					margin-left: -20px;
 					background:white url("../img/logo.svg") no-repeat 50% 50%;
 					background-size: auto 36px;
+
+					@media (min-width: @screen-xlg-min) {
+						margin-top:-7px;
+						height: 50px;
+						background-size: auto 50px;
+					}
 
 				}
 			}
@@ -154,6 +164,14 @@ header{
 							padding:19px 10px;
 						}						
 					}					
+
+					@media (min-width: @screen-xlg-min) {
+						&>a{
+							padding-left:12px;
+							padding-right:12px;
+						}						
+					}
+
 				}
 			}
 
