--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -1,3 +1,10 @@
+body{
+	font-weight:300;
+	@media (min-width: @screen-lg-min) {
+		font-size:20px;
+	}
+}
+
 .btn{
 	padding-left:25px;
 	padding-right:25px;
@@ -45,6 +52,10 @@ h2, .h2 {
 	@media (min-width: @grid-float-breakpoint) {
 	  margin-bottom: @line-height-computed*1;
 		font-size:30px;
+	}
+
+	div+&, p+&{
+		margin-top: @line-height-computed*2;
 	}
 }
 
