--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -97,7 +97,9 @@ blockquote{
 
 section{
 	padding-top:30px;
+	padding-bottom:30px;
 	@media (min-width: @screen-md){
 		padding-top:59px;
+		padding-bottom:59px;
 	}
 }
