--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -33,7 +33,9 @@ body{
 
 
 
-
+strong{
+	font-weight: 600;
+}
 
 h1, .h1 {
 	line-height:1.2;
@@ -63,6 +65,7 @@ h2, .h2 {
 
 h3, .h3,
 h4, .h4 {
+	font-weight: 600;
   margin-top: @line-height-computed*2;
 	line-height: @line-height-computed;
 }
