--- a/SRC/less/footer.less
+++ b/SRC/less/footer.less
@@ -1,28 +1,54 @@
 .page-footer{
+	background: #d6d6d6;
+	color: #484848;
+	padding: 25px;
+
+	@media (min-width: @screen-lg-min) {
+		font-size:16px;
+	}
+
+	a{
+		color: #484848;
+	}
+
+	.fa{
+		display:inline-block;
+		font-size:20px;
+		width: 34px;
+		height:34px;
+		border-radius:17px;
+		line-height:34px;
+		text-align: center;
+		background: #939393;
+		color: #d6d6d6;
+		margin-right: 10px;
+	}
 
 	.container{
-
+		display:flex;
+		align-items: center;
+		justify-content: center;
+		padding:0 20px;
 	}
 
 	ul{
 		list-style:none;
+		margin-left: -20px;
+
+		@media (min-width: @screen-md-min) {
+			display:flex;
+			align-items: center;
+			justify-content: center;
+		}
 
 		li{
-
+			margin: 10px 20px;
+			white-space: nowrap;
 			a{
 
 			}
 		}
 	}
-
-	@media (min-width: @grid-float-breakpoint) {
-		text-align:left;
-
-		ul{
-
-		}
-	}
-
 
 
 }
