oprava sirky paticky

--- a/SRC/less/footer.less
+++ b/SRC/less/footer.less
@@ -1,7 +1,7 @@
 .page-footer{
 	background: #d6d6d6;
 	color: #484848;
-	padding: 25px;
+	padding: 25px 0;
 
 	@media (min-width: @screen-lg-min) {
 		font-size:16px;
