--- a/SRC/less/header.less
+++ b/SRC/less/header.less
@@ -162,14 +162,15 @@ header{
 					
 					@media (min-width: @screen-lg-min) {
 						&>a{
-							padding:19px 10px;
+							padding-top:19px;
+							padding-bottom:19px;
 						}						
 					}					
 
 					@media (min-width: @screen-xlg-min) {
 						&>a{
-							padding-left:12px;
-							padding-right:12px;
+							padding-left:10px;
+							padding-right:10px;
 						}						
 					}
 
