--- a/SRC/less/style.less
+++ b/SRC/less/style.less
@@ -13,6 +13,7 @@
 
 @import "hero.less";
 @import "about.less";
+@import "funkce.less";
 @import "soucasti.less";
 @import "lekari.less";
 @import "follow.less";
