--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -16,6 +16,23 @@ body{
 		padding-right:45px;
 	}
 
+	&.btn-xlg{
+		border-radius:30px;
+		padding: 10px 45px;
+		font-size: 16px;
+
+		@media (min-width: @screen-md-min) {
+			border-radius:50px;
+			padding: 25px 50px;
+			font-size: 25px;
+		}
+	}
+
+	&.btn-block{
+		padding-left:0;
+		padding-right:0;
+	}	
+
 	.fa:first-child {
 		font-size:1.6em;
 		margin: -0.2em .3em -0.2em -10px;
