--- a/SRC/less/lekari.less
+++ b/SRC/less/lekari.less
@@ -6,6 +6,7 @@ section.lekari{
     max-width: 17em;
     margin:20px auto;
     font-size:12px;
+    font-weight: 400;
 
     img{
       display:block;
