--- a/SRC/less/follow.less
+++ b/SRC/less/follow.less
@@ -18,8 +18,9 @@ section.follow{
 		@media (min-width: @screen-sm-min) {
 			margin:0;
 			flex-basis: inherit;
-			position:absolute;
 			margin-left: -11em;
+			width:11em;
+			text-align:right;
 		}
 	}
 
