--- a/SRC/less/about.less
+++ b/SRC/less/about.less
@@ -15,6 +15,7 @@ section.about{
     margin:0 auto;
     position:relative;
     margin-top:20%;
+    width: 80%;
     max-width: 628px;
 
     perspective: 2000px; 
