--- a/SRC/less/funkce.less
+++ b/SRC/less/funkce.less
@@ -11,7 +11,7 @@ section.funkce{
     margin: 0 -15px;
 
     .btn{
-      flex: 1;
+      flex-shrink:1;
       max-width: 12em;
       margin: 0 5px;
       box-shadow: 4px 4px 10px rgba(0,0,0,0.1);
