--- a/SRC/less/header.less
+++ b/SRC/less/header.less
@@ -64,15 +64,14 @@ header{
 
 					.text-hide();
 					display:block;
-					height:40px;width:207px;display:block;
+					height:40px;width:205px;display:block;
 					margin-left: -20px;
 					background:white url("../img/logo.svg") no-repeat 50% 50%;
-					background-size: auto 36px;
+					background-size: contain;
 
 					@media (min-width: @screen-xlg-min) {
 						margin-top:-7px;
 						height: 50px;
-						background-size: auto 50px;
 					}
 
 				}
