--- a/SRC/less/header.less
+++ b/SRC/less/header.less
@@ -5,7 +5,7 @@ header{
 		font-weight:600;
 		font-size:16px;
 
-		.transition(all .5s);
+		.transition(all 0);
 
 		border:none;
 
@@ -14,9 +14,7 @@ header{
 		}
 
 		.container-fluid{position:relative;z-index:2}
-
-		font-weight:300;
-		
+	
 		@media (min-width: @screen-lg-min) {
 			padding: 20px;
 		}
@@ -142,10 +140,29 @@ header{
 						&:hover{
 							background:#f5f5f5;
 						}
+
+						&.order {
+							color: @brand-primary;
+						}
+
+						.email {
+							display: inline-block;
+							border: 1px solid #e5e5e5;
+							border-radius: 8px;
+							padding: 8px 16px;
+							margin: -10px 0;
+
+							.fa {
+								color: @brand-primary;
+								margin-right: 5px;
+								font-size: 22px;
+								vertical-align: -2px;
+							}
+						}
 					}
 
+
 					@media (min-width: @grid-float-breakpoint) {
-						font-size: 14px;
 						&>a{
 							padding:14px 7px;
 							border-bottom:none;
@@ -155,23 +172,21 @@ header{
 						}
 					}
 
-					@media (min-width: @screen-md-min){
-						font-size: 16px
-					}				
+		
 					
 					@media (min-width: @screen-lg-min) {
 						&>a{
 							padding-top:19px;
 							padding-bottom:19px;
+							padding-left:20px;
+							padding-right:20px;
 						}						
 					}					
 
 					@media (min-width: @screen-xlg-min) {
-						&>a{
-							padding-left:10px;
-							padding-right:10px;
-						}						
-					}
+						font-size: 19px;
+				}
+
 
 				}
 			}
@@ -193,13 +208,15 @@ header{
 			top:0;
 			position:absolute;
 			z-index: 2;
+			font-size: 16px;
 			font-weight:600;
 
 
 			@media (min-width: @screen-lg-min){
 				position:static;
 				float:left;
-				padding-left: 20px;
+				padding-left: 30px;
+				margin-right: -20px;
 			}				
 		}
 	}
