prejmenovani lekari na reference

--- a/SRC/less/style.less
+++ b/SRC/less/style.less
@@ -15,6 +15,6 @@
 @import "about.less";
 @import "funkce.less";
 @import "soucasti.less";
-@import "lekari.less";
+@import "reference.less";
 @import "follow.less";
 
