--- a/SRC/less/about.less
+++ b/SRC/less/about.less
@@ -2,14 +2,52 @@ section.about{
   text-align:center;
 
   .container{
-    max-width:49em;
+    max-width:58em;
   }
 
   p{
     margin-bottom: @line-height-computed*2;
   }
 
+  h2{
+    @media (min-width: @grid-float-breakpoint) {
+      margin-top: 80px; 
 
+      &:first-child{
+        margin-top:0;
+      }
+    }
+  }
+
+  .list {
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: left;
+
+    ul{
+      max-width: 35em;
+      list-style-type: none;
+      padding-left: 30px;
+      margin-top: 20px;
+      
+      li { 
+        text-indent: -20px;
+        margin-bottom: 10px;
+        &:before {
+          background-color: @brand-primary;
+          border-radius: 50%;
+          content: "";
+          display: inline-block;
+          margin-right: 12px;
+          margin-bottom: 2px;
+          height: 8px;
+          width: 8px;
+        }
+      }    
+    }
+  }
 
   .box{
     margin:0 auto;
@@ -56,5 +94,34 @@ section.about{
 
     }
   }
+
+
+ 
+  .buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+
+    @media (min-width: @grid-float-breakpoint) {
+      flex-direction: row;
+    }
+    @media (min-width: @screen-md-min) {
+      padding: 30px 0;
+    }
+    margin: 0 -15px;
+
+    .btn{
+      flex-shrink:1;
+      width: 16em;
+      margin: 5px;
+      box-shadow: 4px 4px 10px rgba(0,0,0,0.1);
+
+      @media (min-width: @grid-float-breakpoint) {
+        margin: 0 15px;
+      }
+    }
+  }  
 
 }
