--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -12,19 +12,24 @@ body{
 
 	&.btn-lg{
 		border-radius:30px;
-		padding-left:45px;
-		padding-right:45px;
+		padding: 10px 45px;
+		font-size: 20px;
+		@media (min-width: @screen-md-min) {
+			padding: 14px 50px;
+			font-size: 22px;
+		}
 	}
+
 
 	&.btn-xlg{
 		border-radius:30px;
 		padding: 10px 45px;
-		font-size: 16px;
+		font-size: 20px;
 
 		@media (min-width: @screen-md-min) {
 			border-radius:50px;
 			padding: 25px 50px;
-			font-size: 25px;
+			font-size: 22px;
 		}
 	}
 
