--- a/SRC/less/style.less
+++ b/SRC/less/style.less
@@ -12,9 +12,12 @@
 @import "footer.less";
 
 @import "hero.less";
-@import "about.less";
+@import "smallhero.less";
+@import "text.less";
+@import "box.less";
 @import "funkce.less";
 @import "soucasti.less";
 @import "reference.less";
 @import "follow.less";
+@import "buttons.less";
 
