--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -59,22 +59,12 @@ strong{
 	font-weight: 600;
 }
 
-h1, .h1 {
-	line-height:1.2;
-	margin-top:0;
-
-	@media (min-width: @grid-float-breakpoint) {
-	  margin-bottom: @line-height-computed;
-		font-size:50px;
-	}
-
-}
-
+h1, .h1,
 h2, .h2 {
 	line-height:1.2;
 
 	@media (min-width: @grid-float-breakpoint) {
-	  margin-bottom: @line-height-computed*1;
+	  margin-bottom: @line-height-computed*1.5;
 		font-size:40px;
 	}
 
