vyznam strevni mikroflory, aktualizace hero

--- a/SRC/less/bootstrap-custom.less
+++ b/SRC/less/bootstrap-custom.less
@@ -51,9 +51,10 @@
 @font-family-sans-serif:  "Open Sans",sans-serif;
 @font-size-base:					14px;
 
-@font-size-h1:            20px;
-@font-size-h2:            20px;
+@font-size-h1:            22px;
+@font-size-h2:            22px;
 @font-size-h3:            18px;
+@font-size-h4:            1em;
 
 
 @headings-font-family:     @font-family-sans-serif;
