--- a/SRC/less/funkce.less
+++ b/SRC/less/funkce.less
@@ -1,8 +1,10 @@
 section.funkce{
-  background: #f8f8f8;
   text-align:center;
+  background: #f7fcfd;
  
-
+  .row {
+    margin-bottom: 20px;
+  }
 
   .krok{
     display:flex;
@@ -76,7 +78,7 @@ section.funkce{
     text-align:left;
     padding-left: 50px;
     position:relative;
-    max-width: 36em;
+    max-width: 40em;
     margin-left: auto;
     margin-right: auto;
 
@@ -108,8 +110,8 @@ section.funkce{
       @media (min-width: @grid-float-breakpoint) {
         font-size:30px;
         font-weight: 400;
-        margin-top: 30px;
-        margin-bottom: 20px;
+        margin-top: 60px;
+        margin-bottom: 10px;
       }
 
       &:before{
