--- a/SRC/less/hero.less
+++ b/SRC/less/hero.less
@@ -24,12 +24,21 @@ section.hero{
     
     h1{
       color:white;
-      max-width: 10em;
+      font-size: 28px;
+      max-width: 15em;
+      font-weight: 400;
+      margin-bottom: 20px;
+
 
       @media (min-width: @screen-lg-min) {
         margin-top: 40px;
         margin-bottom: 30px;
-      }      
+      }   
+
+      @media (min-width: @screen-xlg-min) {
+        font-size: 40px;
+      }   
+
     }
 
 
@@ -42,9 +51,10 @@ section.hero{
     background: url("../img/hero-bg.jpg") no-repeat 50% 50%;
     background-size: cover;
     position:relative;
+    padding: 40px 0;
 
     min-height:200px;
-    justify-content: flex-end;
+    justify-content: center;
     
 
     @media (min-width: @screen-sm-min) {
@@ -55,30 +65,33 @@ section.hero{
       min-height: 450px;
     }    
     
-
-    &:before{
-      content:'';
-      position:absolute;
-      top:0;
-      left:0;
-      right:0;
-      bottom:0;
-      background: url("../img/hero-icon.png") no-repeat 50% 50%;
-      background-size: cover;      
+    img {
+      width: 120px;
+      display:block;
+    
+      @media (min-width: @screen-lg-min) {
+        width: 160px;
+        margin-bottom:20px;
+      }
     }
 
     h2{
       position:relative;
       z-index: 1;
-      margin-bottom: 30px;
       
       text-align:center;
       padding:0 30px;
-      max-width:15em;
+      font-weight: 400;
+      margin: 20px 0 0 0;
+      font-size: 16px;
 
       @media (min-width: @screen-lg-min) {
-        font-size:35px;
-        margin-bottom: 80px;
+        font-size: 22px;
+      }   
+
+      @media (min-width: @screen-xlg-min) {
+        font-size: 28px;
+        max-width: 22em;
       }   
 
     }
