--- a/SRC/less/buttons.less
+++ b/SRC/less/buttons.less
@@ -1,4 +1,12 @@
 section.buttons{
+  section.text + &:not(.withbg) {
+    padding-top:0;
+    margin-top:-30px;
+    @media (min-width: @screen-md){
+      margin-top:-59px;
+    }    
+  }
+
   .container{
     max-width:58em;
     text-align:center;
