--- a/SRC/less/bootstrap-custom.less
+++ b/SRC/less/bootstrap-custom.less
@@ -60,8 +60,9 @@
 @headings-font-family:     @font-family-sans-serif;
 @headings-font-weight:    600;
 
-@input-border:						@border-color;
+@input-border:						#a9a9a9;
 @input-border-focus:      @brand-primary;
+@input-color-placeholder: #929292;
 
 @icon-font-path:          "../bower_modules/bootstrap/fonts/";
 
