--- a/SRC/less/bootstrap.less
+++ b/SRC/less/bootstrap.less
@@ -37,7 +37,7 @@
 //@import "@{bootstrap_path}badges.less";
 //@import "@{bootstrap_path}jumbotron.less";
 //@import "@{bootstrap_path}thumbnails.less";
-//@import "@{bootstrap_path}alerts.less";
+@import "@{bootstrap_path}alerts.less";
 //@import "@{bootstrap_path}progress-bars.less";
 //@import "@{bootstrap_path}media.less";
 //@import "@{bootstrap_path}list-group.less";
@@ -49,7 +49,7 @@
 @import "@{bootstrap_path}close.less";
 
 // Components w/ JavaScript
-//@import "@{bootstrap_path}modals.less";
+@import "@{bootstrap_path}modals.less";
 @import "@{bootstrap_path}tooltip.less";
 //@import "@{bootstrap_path}popovers.less";
 //@import "@{bootstrap_path}carousel.less";
