--- a/SRC/less/contacts.less
+++ b/SRC/less/contacts.less
@@ -36,6 +36,7 @@ section.contacts{
   h2 {
     text-align:center;
     margin-top: 40px;
+    font-size: 20px;
 
     @media (min-width: @grid-float-breakpoint) {
       margin-top: 100px;
