--- a/SRC/less/type.less
+++ b/SRC/less/type.less
@@ -99,16 +99,6 @@ h4, .h4 {
 	}
 }
 
-
-
-blockquote{
-	border:0;
-	.h2();
-	.make-md-column(10, 0px);
-	.make-md-column-push(1);
-	font-style:oblique;
-}
-
 .form-control{
 	.box-shadow(none);
 	font-size: 16px;
@@ -140,4 +130,8 @@ hr {
 	border-top-width: 1px;
 	max-width: 200px;
 	margin: 80px auto;
+}
+
+.pager {
+	font-size: 16px;
 }
