--- a/SRC/less/bootstrap.less
+++ b/SRC/less/bootstrap.less
@@ -32,7 +32,7 @@
 @import "@{bootstrap_path}navbar.less";
 //@import "@{bootstrap_path}breadcrumbs.less";
 //@import "@{bootstrap_path}pagination.less";
-//@import "@{bootstrap_path}pager.less";
+@import "@{bootstrap_path}pager.less";
 //@import "@{bootstrap_path}labels.less";
 //@import "@{bootstrap_path}badges.less";
 //@import "@{bootstrap_path}jumbotron.less";
